# ninshiki_opencv

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml
example/: example.cpp
examples/: ball_detection_example.cpp
include/ninshiki_opencv/: detector.hpp  goalpost_finder.hpp
src/: detection.cpp  detector.cpp  goalpost_finder.cpp
src/ninshiki_opencv/: detector.cpp
