<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ninshiki_opencv</name>
  <version>0.1.0</version>
  <description>ROS 2 client project for Webots API</description>
  <maintainer email="nathanterbaik@gmail.com">Nathanael</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>robocup_client</depend>
  <depend>keisan</depend>
  <depend>framework_vision</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
